# hjr_examples

./: .gitignore  hjr_fixed_velocity.py  hjr_variable_velocity.py  main.py  pyproject.toml
dubins_car_example/: dynamics.py  hjr.py
dynamics/: dubins_car.py
for_learning/: hjr_dubins_fixed_velocity.py  hjr_dubins_variable_velocity.py
for_presentations/canoe_example/: canoe.py  two_target.ipynb
for_presentations/discontinuous_running_cost/: canoe.py  canoe_and_rock.py
for_presentations/dubins_car_example/: dynamics.py
for_presentations/maze_example/: maze.py  old.py
for_presentations/maze_example/util/: closed_loop.py  maze_builder.py  roomba.py
for_presentations/reach_avoid_example/: dynamics.py  hjr.py
for_presentations/rock_and_eddy_example/: .canoe.py.swp  canoe.py  canoe_rock_and_target.py
for_presentations/simple_pkpd_example/: compositional_hjr.py  hjr.py
old/dubins_car_example/: hjr.py
old/reach_avoid_example/: dynamics.py  hjr.py
old/simple_pkpd_example/: dynamics.py
reach_avoid_example/: hjr.py
scratch/: timer.py
simple_pkpd_example/: hjr.py
